Panels: - Upon pressing right from a pointer-focused breadcrumn, just jump to the current panel to keep focus visible - Add handle timeout (on 5-way or pointer hover), per UX request - Remove delayed spot of next panel when animating; just do it immediately - Use translateX rather than translate3d, since Spotlight's getAbsoluteBounds can't correctly calculate the 3d translations from the computed style (the div has scale3d applied, so it stays HW-accelerated)
Panel:
- Use the observer-aware setter for the `spotlight` property, so that the new spotlight disappear handling can work correctly

VideoPlayer:
- Added up/down toggle behavior (per UX request)
- Remove spotlightModal and spotlightLeft/Right handlers, so that spotlight can move to the Panels handle from the video player
- Toggle player spotlight to `container` while the full screen controls are open, so that the last focused control is remembered
- Remove margin from full-screen video

--- a/css/moonstone-dark.css
+++ b/css/moonstone-dark.css
@@ -3791,8 +3791,10 @@
 .moon-video-player {
   position: relative;
   display: inline-block;
-  margin: 0 10px;
   background-color: #000000;
+}
+.moon-video-player:not(.enyo-fullscreen) {
+  margin: 0 10px;
 }
 .moon-video-player-container {
   display: block;
@@ -3818,6 +3820,7 @@
 :-webkit-full-screen.moon-video-player {
   position: static !important;
   display: block !important;
+  margin: 0;
 }
 :-webkit-full-screen.moon-video-player .moon-video-player-video {
   position: static;
@@ -3825,6 +3828,7 @@
 :-moz-full-screen.moon-video-player {
   position: static !important;
   display: block !important;
+  margin: 0;
 }
 :-moz-full-screen.moon-video-player .moon-video-player-video {
   position: static;
@@ -3832,6 +3836,7 @@
 :-ms-full-screen.moon-video-player {
   position: static !important;
   display: block !important;
+  margin: 0;
 }
 :-ms-full-screen.moon-video-player .moon-video-player-video {
   position: static;
@@ -3839,6 +3844,7 @@
 :-o-full-screen.moon-video-player {
   position: static !important;
   display: block !important;
+  margin: 0;
 }
 :-o-full-screen.moon-video-player .moon-video-player-video {
   position: static;
@@ -3846,6 +3852,7 @@
 :full-screen.moon-video-player {
   position: static !important;
   display: block !important;
+  margin: 0;
 }
 :full-screen.moon-video-player .moon-video-player-video {
   position: static;
